[package]
name = "vend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.1"
rocket_codegen = "0.5.0-rc.1"
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.10"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"
env_logger = "0.5.12"
log = "0.4.6"
